Use __ instead of _ to segment variables by the role name

--- a/templates/etc/apt/preferences.d/docker-ce.pref.j2
+++ b/templates/etc/apt/preferences.d/docker-ce.pref.j2
@@ -1,4 +1,4 @@
 Explanation: Pin added by Ansible role "{{ role_name }}"
 Package: docker-ce
-Pin: version {{ docker_version }}*
+Pin: version {{ docker__version }}*
 Pin-Priority: 600
