--- a/templates/etc/docker/daemon.json.j2
+++ b/templates/etc/docker/daemon.json.j2
@@ -1,11 +1,11 @@
 {
-{%- if docker__default_daemon_json | default() -%}
+{%- if docker__default_daemon_json | d() -%}
 {{ docker__default_daemon_json | indent(2, true) }}
 {%- endif -%}
-{%- if (docker__default_daemon_json | default()) and (docker__daemon_json | default()) -%}
+{%- if (docker__default_daemon_json | d()) and (docker__daemon_json | d()) -%}
 ,
 {%- endif -%}
-{%- if docker__daemon_json | default() -%}
+{%- if docker__daemon_json | d() -%}
 {{ docker__daemon_json | indent(2, true) }}
 {%- endif -%}
 }
