--- a/templates/etc/systemd/system/docker.service.d/environment.conf.j2
+++ b/templates/etc/systemd/system/docker.service.d/environment.conf.j2
@@ -1,4 +1,4 @@
 # {{ ansible_managed }}
 
 [Service]
-Environment="{{ docker__daemon_environment | join('" "') }}"
+Environment={{ docker__daemon_environment | join('" "') }}
