Fix pin to support any prefix

--- a/templates/etc/apt/preferences.d/docker.pref.j2
+++ b/templates/etc/apt/preferences.d/docker.pref.j2
@@ -1,4 +1,4 @@
 Explanation: Pin added by Ansible role "{{ role_name }}"
 Package: docker-{{ docker__edition }}*
-Pin: version {{ docker__version }}*
+Pin: version *{{ docker__version }}*
 Pin-Priority: 600
