--- a/templates/etc/apt/preferences.d/docker.pref.j2
+++ b/templates/etc/apt/preferences.d/docker.pref.j2
@@ -1,4 +1,8 @@
+{%- set _docker__version = docker__version -%}
+{%- if "5:" not in docker__version -%}
+{%-   set _docker__version = "5:" + _docker__version %}
+{%- endif %}
 Explanation: Pin added by Ansible role "{{ role_name }}"
 Package: docker-{{ docker__edition }}*
-Pin: version {{ docker__version }}*
+Pin: version {{ _docker__version }}*
 Pin-Priority: 600
